DEPLOYING 4.4.10: adding "net.algart.executors.check.existing.paths" system property; ability to call ExecutingChain without image and result folder